<resources>
    <string name="app_name">MOODS</string>
    <string name="category_items">%s Items</string>
    <string name="contentDescription">contentDescription</string>
    <string name="detailsFragment_loading_price_error_tip">Error with Loading the price, update to latest version and reopen the app.</string>
    <string name="splashFragment_check_version_tip">check app version…</string>
    <string name="splashFragment_loading_data">loading data…</string>
    <string name="splashFragment_opening">opening…</string>
    <string name="category_title_sandwich">Sandwiches</string>
    <string name="category_title_burgers">Burgers</string>
    <string name="category_title_meals">Meals</string>
    <string name="category_title_healthMeal">Health Meals</string>
    <string name="category_title_wraps">Wraps</string>
    <string name="category_title_rizo">Rizo</string>
    <string name="category_title_potatoes">Potatoes بطاطس</string>
    <string name="category_title_sauces">Sauces صوص</string>
    <string name="category_title_additions">Additions إضافات</string>
    <string name="category_title_stripsMeals">Strips Meals</string>
    <string name="category_title_kidsMeals">Kids Meals</string>
    <string name="main_menu_item_home">Home</string>
    <string name="main_menu_item_favorite">Favorite</string>
    <string name="main_menu_item_search">Search</string>
    <string name="main_menu_item_profile">Profile</string>
    <string name="searched_item_menu_remove">remove</string>
    <string name="categoryFragment_categories">Categories</string>
    <string name="detailsFragment_title">Item Details</string>
    <string name="detailsFragment_price">Price</string>
    <string name="detailsFragment_small">SMALL</string>
    <string name="detailsFragment_large">LARGE</string>
    <string name="detailsFragment_single">SINGLE</string>
    <string name="detailsFragment_double">DOUBLE</string>
    <string name="detailsFragment_triple">TRIPLE</string>
    <string name="favoriteFragment_title">My Favorite Items</string>
    <string name="homeFragment_dishes">Dishes</string>
    <string name="homeFragment_food_categories">Food Categories</string>
    <string name="homeFragment_popular_items">Popular Items</string>
    <string name="app_name_description"><![CDATA[RESTAURANT & CAFE]]></string>
    <string name="profileFragment_place_on_googl_maps">Place on Google Maps</string>
    <string name="profileFragment_facebook_page">Facebook Page</string>
    <string name="profileFragment_share_app">Share App</string>
    <string name="profileFragment_dark_mode">Dark Mode</string>
    <string name="profileFragment_app_creator">App Creator</string>
    <string name="searchFragment_editTextHint">Search</string>
    <string name="profileFragment_history_tip">History</string>
    <string name="splashFragment_initializing">Initializing</string>
    <string name="splashFragment_alert">Alert</string>
    <string name="splashFragment_mustUpdataMessage">There is a new version of Moods application. The application must be updated to enjoy the best service.</string>
    <string name="splashFragment_shouldUpdataMessage">There is a new version of Moods application. The application should be updated to enjoy the best service.</string>
    <string name="splashFragment_firestOpenMessage">The phone should be connected to the network at least the first time to open Moods app. Please make sure to connect to the Internet and try again.</string>
    <string name="splashFragment_ok">OK</string>
    <string name="splashFragment_update">Update</string>
    <string name="splashFragment_exit">Exit</string>
</resources>