<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SplashFragment">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/splash_logo"
            android:contentDescription="@string/contentDescription" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textSize="45sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_description"
                android:textSize="17sp" />

    </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/startTitle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:text="@string/app_name"-->
<!--        android:textColor="@color/colorPrimary"-->
<!--        android:textSize="52sp" />-->

    <ProgressBar
        android:id="@+id/startProgress"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:indeterminateTint="@color/moodsColorPrimary"
        android:layout_above="@+id/startDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/startDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/splashFragment_initializing"
        android:layout_marginBottom="15dp"/>

</RelativeLayout>