<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailsFragment"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:text="@string/detailsFragment_title"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_alignTop="@+id/title"
            android:layout_alignBottom="@+id/title"
            android:contentDescription="@string/contentDescription"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/food_card"
            android:layout_below="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardPreventCornerOverlap="false"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">
            <ImageView
                android:id="@+id/food_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentDescription"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_below="@+id/food_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/food_new"
                android:layout_width="39dp"
                android:layout_height="39dp"
                android:src="@drawable/ic_new_viewpager_item"
                android:gravity="center"
                android:visibility="gone"
                android:contentDescription="@string/contentDescription" />

            <RelativeLayout
                android:id="@+id/food_favourite_container"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/circle_back_stroked"
                android:gravity="center"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/food_favourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/check_box_test"
                    android:enabled="false"/>
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/food_title"
            android:layout_below="@+id/food_card"
            android:layout_alignParentStart="true"
            android:gravity="left"
            android:layout_toStartOf="@+id/buttonsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/food_description"
            android:layout_below="@+id/food_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:gravity="left"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/price"
            android:layout_below="@+id/food_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsFragment_price"
            android:layout_marginVertical="5dp"
            android:textSize="18sp"
            android:gravity="left"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/onePrice_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/twoPrices_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/detailsFragment_small"
                    android:textSize="13sp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/detailsFragment_large"
                    android:textSize="13sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:id="@+id/twoPrices_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/twoPrices_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/threePrices_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/detailsFragment_single"
                    android:textSize="13sp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/detailsFragment_double"
                    android:textSize="13sp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/detailsFragment_triple"
                    android:textSize="13sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:id="@+id/threePrices_single"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/threePrices_double"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/threePrices_triple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
