<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:scrollbars="none">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginVertical="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/profile_logo"
                android:contentDescription="@string/contentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textSize="43sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_description"
                android:textSize="15sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_landPhoneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_land_phone"
                    android:contentDescription="@string/contentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="096 333 999 7"
                    android:textSize="18sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/image1"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_phoneBtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_phone"
                    android:contentDescription="@string/contentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0105 010 8006"
                    android:textSize="18sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/image2"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_phoneBtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_phone"
                    android:contentDescription="@string/contentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0105 010 8007"
                    android:textSize="18sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/image3"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_googleMapsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_place"
                    android:contentDescription="@string/contentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profileFragment_place_on_googl_maps"
                    android:textSize="18sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/image4"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_facebookPageBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image5"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_facebook"
                    android:contentDescription="@string/contentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profileFragment_facebook_page"
                    android:textSize="18sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/image5"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_shareAppBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image6"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_share"
                    android:contentDescription="@string/contentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profileFragment_share_app"
                    android:textSize="18sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/image6"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/dark_mode_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profileFragment_dark_mode"
            android:layout_marginHorizontal="20dp"
            android:gravity="left|center_vertical"
            tools:ignore="RtlHardcoded"
            android:textColor="?colorPrimary"/>

        <TextView
            android:id="@+id/profile_app_creator"
            android:visibility="gone"
            android:background="@drawable/profile_item_bg"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileFragment_app_creator"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="?colorPrimary"
            android:layout_marginVertical="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>
</ScrollView>